...
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="shoppingBasketTableViewCell" rowHeight="120" id="ebO-QZ-qu6" customClass="ShoppingBasketTableViewCell" customModule="EasyShopper" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="28" width="414" height="120"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                                            <userDefinedRuntimeAttributes>
                                                                <userDefinedRuntimeAttribute type="boolean" keyPath="isAccessibilityElement" value="YES"/>
                                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ProductBrandNameLabel"/>
                                                            </userDefinedRuntimeAttributes>
                                                        </label>
...
                                                            <userDefinedRuntimeAttributes>
                                                                <userDefinedRuntimeAttribute type="boolean" keyPath="isAccessibilityElement" value="YES"/>
                                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ProductQuantityLabel"/>
                                                            </userDefinedRuntimeAttributes>
                                                        </label>
...
                                                            <userDefinedRuntimeAttributes>
                                                                <userDefinedRuntimeAttribute type="boolean" keyPath="isAccessibilityElement" value="YES"/>
                                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ProductPriceLabel"/>
                                                            </userDefinedRuntimeAttributes>
                                                        </label>
...
                                                    <userDefinedRuntimeAttributes>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="isAccessibilityElement" value="YES"/>
                                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ProductBrandImage"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
...
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isAccessibilityElement" value="YES"/>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ShoppingBasketTableView"/>
                                </userDefinedRuntimeAttributes>
                            </tableView>
...
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isAccessibilityElement" value="YES"/>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="totalLabel"/>
                                        </userDefinedRuntimeAttributes>
                                    </label>
...
                                </constraints>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="totalContainer"/>
                                </userDefinedRuntimeAttributes>
                            </view>
...
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="boolean" keyPath="isAccessibilityElement" value="YES"/>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="clearNavigationButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="boolean" keyPath="isAccessibilityElement" value="YES"/>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="addNavigationButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProductsTableViewCellId" rowHeight="120" id="drk-qi-oqN" customClass="ProductsTableViewCell" customModule="EasyShopper" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="28" width="414" height="120"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                                    <userDefinedRuntimeAttributes>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="isAccessibilityElement" value="YES"/>
                                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ProductImage"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
...
                                                            <userDefinedRuntimeAttributes>
                                                                <userDefinedRuntimeAttribute type="boolean" keyPath="isAccessibilityElement" value="YES"/>
                                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ProcductName"/>
                                                            </userDefinedRuntimeAttributes>
                                                        </label>
...
                                                            <userDefinedRuntimeAttributes>
                                                                <userDefinedRuntimeAttribute type="boolean" keyPath="isAccessibilityElement" value="YES"/>
                                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ProcductPrice"/>
                                                            </userDefinedRuntimeAttributes>
                                                        </label>
...
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isAccessibilityElement" value="YES"/>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ProductsTableView"/>
                                </userDefinedRuntimeAttributes>
                            </tableView>
...
