...
    weak var delegate: ShoppingBasketViewController!
    
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.isAccessibilityElement = false
        view.accessibilityIdentifier = "productsTableView"
        spinner.color = KachingTheme.colorChoice
        spinner.startAnimating()
        productsTable.isHidden = true
        productsTable.separatorColor = KachingTheme.colorChoice
        viewModel = ProductsViewModel(delegate: self)
        viewModel.fetchProducts()
...
