...
    private var viewModel: ShoppingBasketViewModel!
    var tableViewDataSource: ShoppingBasketViewControllerDataSource?
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.isAccessibilityElement = false
        view.accessibilityIdentifier = "onboardingView"
        spinner.color = KachingTheme.colorChoice
        shoppingBasketTable.isHidden = true
        shoppingBasketTable.separatorColor = KachingTheme.colorChoice
        viewModel = ShoppingBasketViewModel(delegate: self)
        tableViewDataSource = ShoppingBasketViewControllerDataSource(viewModel: viewModel, reusableIdentifier: CellIdentifiers.list)
        shoppingBasketTable.dataSource = tableViewDataSource
...
